# generative-ai

./: .gitignore
RAG-chatbot-multiformat/: README.md  pyproject.toml  rag-chatbot-poc-v1.ipynb  rag-chatbot-poc-v1_llama.ipynb  rag-chatbot-poc-v1_new.ipynb
RAG-docker/: .env  .gitignore  Dockerfile  Dockerfile.bak  README.md  build.sh  docker-compose.yml  pyproject.toml  run.sh
RAG-docker/src/: main.py
RAG-docker/src/gradioUI/: __init__.py
RAG-docker/src/llm/: __init__.py
RAG-llama2-custom-pdfs/: RAG-llamachat-hf-6.3-4bit.ipynb  RAG-llamachat-hf-6.3.ipynb  README.md  pyproject.toml
csv-llm-chat/: README.md  analyze-csv-llm-graphs-4bit.ipynb  analyze-csv-llm-graphs.ipynb  pyproject.toml
dellai-llama2-chat/chat-app/: .env  docker-compose.yml
