[tool.poetry]
name = "rag-chatbot-multiformat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
jupyter = "^1.1.1"
langchain = "^0.3.12"
langchain-community = "^0.3.12"
transformers = "^4.47.0"
torch = "^2.5.1"
huggingface-hub = "^0.27.0"
gradio = "^5.9.1"
tqdm = "^4.67.1"
pandas = "^2.2.3"
unstructured = "^0.16.11"
pypdf = "^5.1.0"
bitsandbytes = "^0.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
