[tool.poetry]
name = "rag-chatbot-multiformat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
jupyter = "^1.1.1"
langchain = "^0.3.12"
langchain-community = "^0.3.12"
torch = "^2.5.1"
huggingface-hub = "0.23"
pandas = "^2.2.3"
unstructured = "^0.16.11"
bitsandbytes = "^0.45.0"
python-pptx = "^1.0.2"
instructorembedding = "^1.0.1"
sentence-transformers = "2.2.2"
gradio = "^4"
chromadb = "^0.5.23"
accelerate = "^0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
