[tool.poetry]
name = "rag-docker"
version = "0.1.0"
description = ""
authors = ["seungmin <seungmin@maymust.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
jupyter = "^1.1.1"
langchain = "^0.3.12"
langchain-community = "^0.3.12"
torch = "^2.5.1"
huggingface-hub = "0.24"
pandas = "^2.2.3"
unstructured = "^0.16.11"
bitsandbytes = "^0.45.0"
python-pptx = "^1.0.2"
instructorembedding = "^1.0.1"
sentence-transformers = "2.2.2"
gradio = "^4"
accelerate = "^1.2.1"
chroma-hnswlib = "0.7.3"
chromadb = "0.4.24"
transformers = "^4.47.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
