[project]
name = "csv-llm-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "torch>=2.5.1",
    "huggingface-hub==0.24",
    "unstructured>=0.16.11",
    "bitsandbytes>=0.45.0",
    "python-pptx>=1.0.2",
    "instructorembedding>=1.0.1",
    "sentence-transformers==2.2.2",
    "accelerate>=1.2.1",
    "transformers>=4.47.1",
    "jupyter>=1.1.1",
    "tabulate>=0.9.0",
    "langchain-experimental==0.0.51",
    "matplotlib>=3.10.0",
    "langchain>=0.1.7",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "icecream>=2.1.3",
]
